--- a/styles.css
+++ b/styles.css
@@ -8,18 +8,30 @@ html {
 }
 
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
   min-height: 100vh;
   margin: 0;
+  background-color: #282a36;
 }
 
 h1,
 h2 {
-  margin: 5px;
+  margin: 0px;
+}
+
+h1 {
+  font-size: 35px;
+  color: #50fa7b;
+}
+
+h2 {
+  font-size: 25px;
+  color: #ff79c6;
+  padding-bottom: 20px;
 }
 
 ul {
@@ -30,19 +42,24 @@ ul {
   list-style: none;
   display: flex;
   flex-flow: column;
-  gap: 10px;
+  gap: 12px;
 }
 
 a {
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
+  color: #f8f8f2;
 }
 
 .card {
   flex: 1;
   display: flex;
   flex-flow: row nowrap;
-  max-width: 1200px;
+  max-width: 1100px;
+  max-height: 576px;
+  background-color: #44475a;
+  overflow: hidden;
+  border-radius: 20px;
 }
 
 .textcard {
@@ -53,16 +70,37 @@ a {
 
 .welcome {
   flex: 1;
+  color: #f8f8f2;
+  max-height: 150px;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 35px 0px 35px 0px;
 }
 
 .lists {
   flex: 1;
-  flex-grow: 4;
+  flex-grow: 2;
   display: flex;
+  gap: 40px;
   justify-content: center;
-  gap: 45px;
+  align-items: flex-start;
+}
+
+.cachi {
+  color: #ff5555;
+}
+
+.image {
+  flex: 1;
+  display: flex;
+  flex-basis: auto;
+  max-width: 324px;
+  overflow: hidden;
+  justify-content: center;
+}
+
+img {
+  flex: 1;
+  max-width: 100%;
+  max-height: 100%;
 }
