--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ a {
   display: flex;
   gap: 40px;
   justify-content: center;
-  align-items: flex-start;
+  align-items: stretch;
 }
 
 .cachi {
